update small scale evaluation